test_regress/t/t_randc_oversize_bad.out
%Error: t/t_randc_oversize_bad.v:8:21: Maximum implemented width for randc is 32 bits, 'i' is 38 bits
                                     : ... note: In instance 't'
    8 |    randc bit [37:0] i;
      |                     ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
